Fix shiftTab css

--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -8,6 +8,7 @@
 
 .tab{
     padding: 0.5em 1.2em;
+    margin-bottom: 1em;
     border-style: solid;
     border-width: 1px 1px 2px;
     border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.15);
