--- a/src/pages/RegistrationPage/RegistrationPage.module.css
+++ b/src/pages/RegistrationPage/RegistrationPage.module.css
@@ -28,7 +28,7 @@
 .shiftDescription{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
     max-width: 20em;
     padding: 1.5em 2em;
@@ -40,8 +40,13 @@
 
 .tabs {
     display: flex;
-    margin-bottom: 2em;
+    flex-wrap: wrap;
+    margin-bottom: 1em;
     justify-content: center;
     align-items: center;
     grid-column-gap: 1em;
+}
+
+.shiftTab{
+    font-size: 0.8em;
 }
